removed model plotting

--- a/keras_cnn.ipynb
+++ b/keras_cnn.ipynb
@@ -274,8 +274,8 @@
     }
    ],
    "source": [
-    "from keras.utils.vis_utils import plot_model\n",
-    "plot_model(model, to_file='temp/model.png', show_shapes=True, show_layer_names=True,dpi = 120)"
+    "# from keras.utils.vis_utils import plot_model\n",
+    "# plot_model(model, to_file='temp/model.png', show_shapes=True, show_layer_names=True,dpi = 120)"
    ]
   },
   {
