more in transfer learning

--- a/transfer_leraning_trial.ipynb
+++ b/transfer_leraning_trial.ipynb
@@ -6,62 +6,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.applications import ResNet50\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense"
+    "from keras.applications.resnet50 import ResNet50\n",
+    "from keras.layers import BatchNormalization, Dropout, Dense, Flatten\n",
+    "from keras.models import Sequential "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From e:\\privateprojects\\others\\venv\\lib\\site-packages\\tensorflow_core\\python\\ops\\resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "If using Keras pass *_constraint arguments to layers.\n",
-      "WARNING:tensorflow:From e:\\privateprojects\\others\\venv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4070: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
-      "\n",
-      "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.2/resnet50_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-      "94658560/94653016 [==============================] - 804s 8us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "model.add(ResNet50(include_top = False, weights = \"imagenet\", pooling = \"avg\", input_shape = (150,150,3)))\n",
-    "model.add(Dense(6,activation = \"softmax\"))\n",
-    "model.layers[0].trainable = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_4\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "resnet50 (Model)             (None, 2048)              23587712  \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 6)                 12294     \n",
-      "=================================================================\n",
-      "Total params: 23,600,006\n",
-      "Trainable params: 12,294\n",
-      "Non-trainable params: 23,587,712\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
+    "model.add(ResNet50(include_top=False, input_shape =(150,150,3), weights = \"imagenet\"))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(1024, activation = \"relu\"))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Dropout(0.20))\n",
+    "model.add(Dense(128, activation = \"relu\"))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Dropout(0.20))\n",
+    "model.add(Dense(6, activation = \"softmax\"))\n",
+    "model.layers[0].trainable = False\n",
     "model.summary()"
    ]
   },
@@ -132,18 +98,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From e:\\privateprojects\\others\\venv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:422: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
-      "\n",
-      "Epoch 1/10\n",
-      " 4/50 [=>............................] - ETA: 38:10 - loss: 2.1065 - accuracy: 0.2031"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "history = model.fit_generator(train, epochs=epochs, steps_per_epoch = 50, validation_data=val, verbose = 1, callbacks=[learning_rate_reduction])"
    ]
